# miniclang

./: .gitignore  CMakeLists.txt  README.md
doc/: cmake_with_cpp_module.md
src/: CMakeLists.txt  lexer.h  main.cpp  source_location.h  token.h
test/bash/: test.sh
test/python/: CMakeLists.txt  test_basic.py
